src/scss/themes/_setting.scss
.btn-sidesettingbar {
    position: absolute;
    top: 1px;
    right: 40px;
    .fa{
    	font-size: 32px;
    }
}

.side-setting-menu{
	.side-setting-menu-wrap{
		background: $white;
		min-width: 180px;
		border-radius: 30px;
		padding: 20px;
		left: 15px;
		// height: 100%;
		z-index: 10;
		margin-right: 20px;
	}
	.page-title{
		padding-left: 15px;
	}
}

.setting-inner-wrap{
	padding-bottom: 1em;
	.custom-radio .custom-control-label::before{
		border-radius: 6px !important;
	}
	.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E");
		border-radius: 3px !important;
	}
}

.ss-menu-box{
	.ss-menu-title{
		font-size: 15px;
		margin-bottom: 2px;
		font-weight: 500;
	}
	ul{
		li{
			a{
				color: $dark;
				font-size: 12px;
    			padding: 0.25rem 0;
    			position: relative;
    			&:before{
					content: "";
					position: absolute;
					left: -10px;
					background: transparent;
					width: 6px;
					height: 20px;
					border-radius: 10px;
					transition: all ease 0.5s;
    			}
    			&:hover, &.active{
    				&:before{
	    				background: $dark;
	    			}
    			}
			}
		}
	}
}

.setting-wrap{
	max-width: 540px;
    width: 100%;
    position: relative;
    .top-block{
    	min-height: 57px;
    	.form-heading{
    		padding-left: 15px;
    	}
    }
    .form-box{
    	font-size: 12px;
    	clear: both;
    	.custom-control-label::before, .custom-control-label::after{
    		top: 0;
    	}
    }
    .account-delete{
    	position: absolute;
    	top: 15px;
    	right: 30px;
    }
    &.w-100{
    	max-width: 100%;
    }
	.custom-radio .custom-control-input:checked ~ .custom-control-label::before {
	    background-color: #000000;
	    cursor: pointer;
	}
	.table-wrapper{
		.card-body{
			border-radius: 30px;
		}
	}
}

.plan-status{
	span{
		border-radius: 4px;
	}
}


.side-setting-menu-toggler, .side-setting-menu-close{
	display: none;
}

body.overflow{
	overflow: hidden;
}

.datepicker-days{
	table{
		width: 250px
	}
}

.form-group{
	label{
		span.clr-red{
			display: inline-block;
			vertical-align: middle;
		}
	}
}

table.setting-table{
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 250px;
	}
	.column-4{
		width: 80px;
	}
	.column-5{
		width: 80px;
	}
	.column-6{
		width: 80px;
	}
	.column-7{
		width: 80px;
	}
}

table.store-account-table{
	.column-1{
		width: 100px;
	}
	.column-2{
		width: 250px;
	}
	.column-3{
		width: 100px;
	}
	.column-4{
		width: 100px;
	}
	.column-5{
		width: 100px;
	}
	.column-6{
		width: 100px;
	}
	.column-7{
		width: 100px;
	}
	.column-8{
		width: 100px;
	}
	.d-flex{
		align-items: center;
		justify-content: center;
	}
}

table.delivery-warehouse-table{
	.column-1{
		width: 120px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 100px;
	}
	.column-4{
		width: 300px;
	}
	.column-5{
		width: 100px;
	}
	.column-6{
		width: 100px;
	}
	.d-flex{
		align-items: center;
		justify-content: center;
	}
}

table.supplier-table{
	.column-1{
		width: 120px;
	}
	.column-2{
		width: 60%;
	}
	.column-3{
		width: 100px;
	}
	.text-left{
		padding-left: 3em !important;
	}
}

table.hold-status-table{
	.column-1{
		width: 80%;
	}
	.column-2{
		width: 100px;
	}
	.text-left{
		padding-left: 3em !important;
	}
}

.setting-modal-page{
	.status-box{
		li a{
			border: 1px solid #e0e0e0;
			line-height: 38px !important;
			&.active{
				border-width: 4px;
				line-height: 30px !important;
			}
		}
	}
	label{
		font-size: 12px;
	}
	.choose-option-box{
		border-top: 1px solid #e0e0e0;
		padding-top: 1em;
	}
}

table.delivery-warehouse-edit-table{
	.column-1{
		width: 100px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 100px;
	}
	.column-4{
		width: 100px;
	}
	.column-5{
		width: 100px;
	}
	.column-6{
		width: 120px;
	}
}

.setting-modal-page{
	nav.py-3{
		border-top: 1px solid #f2f2f2;
	}
	.pagination{
		li{
			a{
				&.previous, &.active, &.next{
					border: 1px solid $dark;
				}
				&:hover{
					border: 1px solid $dark;
				}
			}
		}
	}
}

.setting-pagi{
	.pagination a.previous, .pagination a.next, .pagination a.active {
	    border: 0 !important;
	}
}

.delivery-carrier-table{
	.column-1{
		width: 100px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 200px;
	}
	.column-4{
		width: 15px;
	}
	th, td{
		border: 0;
	}
}

.settelment-method-table{
	.column-1{
		width: 100px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 100px;
	}
	.column-4{
		width: 100px;
	}
	.column-5{
		width: 100px;
	}
	.column-6{
		width: 100px;
	}
}

